/* Copyright 2021 The TensorFlow Authors. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto2";

package tflite.task.text;

import "tensorflow_lite_support/cc/task/core/proto/base_options.proto";

// Options for setting up a BertNLClassifier.
// Next Id: 3
message BertNLClassifierOptions {
  // Base options for configuring BertNLClassifier, such as specifying the
  // TfLite model file with metadata, accelerator options, etc.
  optional tflite.task.core.BaseOptions base_options = 1;

  // Max number of tokens to pass to the model.
  //
  // Deprecated: max_seq_len is now read from the model (i.e. input tensor size)
  // automatically.
  optional int32 max_seq_len = 2 [default = 128];
}
